--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
-name: SITworkflow
-on: workflow_dispatch
+name: SIT
+on:
+  workflow_run:
+    workflows: PreApproval
+    types:
+      - completed
+  workflow_dispatch:
+  
 jobs:
   Build:
     name: Build Npm project
-#runs-on is agent
     runs-on: ubuntu-latest
     steps:    
     - name : Build
