--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,12 +13,14 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build -t amzaon_ecs/sourabh . 
-    - name: login ecr
-      run: |
-        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 739275441922.dkr.ecr.us-east-1.amazonaws.com
-    - name: add tag
-      run: |
-        docker tag amzaon_ecs/sourabh:latest 739275441922.dkr.ecr.us-east-1.amazonaws.com/amzaon_ecs/sourabh:latest
-    - name: push to ecr
-      run: |
-       docker push 739275441922.dkr.ecr.us-east-1.amazonaws.com/amzaon_ecs/sourabh:latest
+    - name: hehe
+      uses: docker/login-action@v2
+      with:
+        username: sgulhane
+        password: dckr_pat_V0RvQkYrFBDUdwO8dtcOf_M6IWg
+    - name: docker push
+      run : |
+         docker pull nginx
+         docker images
+         docker tag amzaon_ecs/sourabh  sgulhane/automation:latest
+         docker push sgulhane/automation:latest
